--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,15 +5,20 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
+    "aiofiles>=24.1.0",
     "aiohttp>=3.10.10",
     "asyncio>=3.4.3",
+    "deepgram-sdk>=3.7.5",
     "fastapi>=0.115.2",
     "loguru>=0.7.2",
     "openai>=1.52.0",
+    "pip>=24.2",
     "pydantic>=2.9.2",
     "pydub>=0.25.1",
     "python-dotenv>=1.0.1",
     "requests>=2.32.3",
+    "scikit-learn>=1.5.2",
+    "spacy>=3.8.2",
     "transitions>=0.9.2",
     "uvicorn>=0.32.0",
 ]
