--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,8 @@ dependencies = [
     "pip>=24.2",
     "pydantic>=2.9.2",
     "pydub>=0.25.1",
+    "pytest-mock>=3.14.0",
+    "pytest>=8.3.3",
     "python-dotenv>=1.0.1",
     "requests>=2.32.3",
     "scikit-learn>=1.5.2",
