Update README.md formatting and enhance .env.example with additional configuration options

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,12 @@
-OPENAI_API_KEY=your_openai_api_key_here
 API_TOKEN=your_api_token_here
+OPENAI_API_KEY=your_openai_api_key_here
+DEEPGRAM_API_KEY=your_deepgram_api_key_here
 API_URL=https://api.example.com
 WEBHOOK_URL=https://your-webhook-url.com
-AGENT_PHONE_NUMBER=+1234567890
 WEBHOOK_PORT=8080
+AGENT_PHONE_NUMBER=+1234567890
 CONCURRENT_CALLS=1
 MAX_DEPTH=10
 TIMEOUT_SECONDS=300
+RETRY_DELAY_SECONDS=10
+MAX_RETRIES=3
